[gd_scene load_steps=23 format=2]

[ext_resource path="res://world/places/3D_place_1.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/player/ships/player_ship.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/global_label.gd" type="Script" id=3]
[ext_resource path="res://world/battle/battle_stage.gd" type="Script" id=4]
[ext_resource path="res://ui/force_arrow.gd" type="Script" id=5]
[ext_resource path="res://world/battle/3d_cam.gd" type="Script" id=6]
[ext_resource path="res://world/battle/player_cam.gd" type="Script" id=7]
[ext_resource path="res://testing/debug_vector.gd" type="Script" id=8]
[ext_resource path="res://world/battle/pos_label.gd" type="Script" id=9]
[ext_resource path="res://ui/speed_arrow.gd" type="Script" id=10]
[ext_resource path="res://world/battle/background01.png" type="Texture" id=12]
[ext_resource path="res://ui/arrow.png" type="Texture" id=13]
[ext_resource path="res://world/battle/background.gd" type="Script" id=14]

[sub_resource type="SphereMesh" id=1]
radius = 0.25
height = 0.5

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 0.25
height = 0.5

[sub_resource type="CapsuleMesh" id=5]
radius = 0.1
mid_height = 10.0

[sub_resource type="CapsuleMesh" id=6]
radius = 0.1
mid_height = 7.0

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.1, 10, 10 )

[sub_resource type="SphereMesh" id=8]
radius = 7.0
height = 14.0

[sub_resource type="CircleShape2D" id=9]
radius = 8000.0

[node name="battle_stage" type="Node2D"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 12 )
script = ExtResource( 14 )

[node name="3D_viewport" type="Viewport" parent="."]
size = Vector2( 2560, 1440 )
render_target_v_flip = true

[node name="spatial_map" type="Spatial" parent="3D_viewport"]

[node name="3D_cam" type="Camera" parent="3D_viewport/spatial_map"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 7 )
current = true
fov = 65.0
script = ExtResource( 6 )
SPEED_SCALE = 836850

[node name="debug_spaceship" type="MeshInstance" parent="3D_viewport/spatial_map/3D_cam"]
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="render_box" type="Area" parent="3D_viewport/spatial_map/3D_cam"]

[node name="render_box_shape" type="CollisionShape" parent="3D_viewport/spatial_map/3D_cam/render_box"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="3D_place_1" parent="3D_viewport/spatial_map" instance=ExtResource( 1 )]

[node name="debug_indicator" type="MeshInstance" parent="3D_viewport/spatial_map"]
mesh = SubResource( 4 )
material/0 = null

[node name="debug_pill" type="MeshInstance" parent="3D_viewport/spatial_map"]
visible = false
mesh = SubResource( 5 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="3D_viewport/spatial_map/debug_pill"]
transform = Transform( 1, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0 )
mesh = SubResource( 6 )
material/0 = null

[node name="debug_cam" type="Camera" parent="3D_viewport/spatial_map"]
transform = Transform( 0.780198, 0.0890214, 0.619165, 0.0251857, 0.984549, -0.173291, -0.625025, 0.150795, 0.765901, 9.19096, 1.48631, 7.44786 )

[node name="debug_plane" type="MeshInstance" parent="3D_viewport/spatial_map"]
visible = false
mesh = SubResource( 7 )
material/0 = null

[node name="debug_rail" type="MeshInstance" parent="3D_viewport/spatial_map"]
visible = false
mesh = SubResource( 8 )
material/0 = null

[node name="player_cam" type="Camera2D" parent="."]
current = true
script = ExtResource( 7 )

[node name="debug_ui" type="Control" parent="player_cam"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pos_label" type="Label" parent="player_cam/debug_ui"]
visible = false
margin_left = -20.0226
margin_top = -80.0904
margin_right = 19.9774
margin_bottom = -66.0904
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="force_arrow" type="Sprite" parent="player_cam/debug_ui"]
visible = false
texture = ExtResource( 13 )
script = ExtResource( 5 )

[node name="speed_arrow" type="Sprite" parent="player_cam/debug_ui"]
texture = ExtResource( 13 )
script = ExtResource( 10 )

[node name="physics_fps" type="Label" parent="player_cam/debug_ui"]
margin_left = -949.037
margin_top = -532.51
margin_right = -909.037
margin_bottom = -518.51
__meta__ = {
"_edit_use_anchors_": false
}

[node name="global_label" type="Label" parent="player_cam/debug_ui"]
margin_left = -20.0
margin_top = -100.0
margin_right = 20.0
margin_bottom = -86.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="process_fps" type="Label" parent="player_cam/debug_ui"]
margin_left = -955.02
margin_top = -510.268
margin_right = -824.02
margin_bottom = -449.268
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_ship" parent="." instance=ExtResource( 2 )]
angular_damp = -1.0

[node name="play_area" type="Area2D" parent="."]
visible = false

[node name="play_area_shape" type="CollisionShape2D" parent="play_area"]
shape = SubResource( 9 )

[node name="debug_2D" type="Camera2D" parent="."]
zoom = Vector2( 100, 100 )

[node name="debug_vector" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 0, 0 )
script = ExtResource( 8 )

[connection signal="area_entered" from="3D_viewport/spatial_map/3D_cam/render_box" to="." method="_on_render_box_area_entered"]
[connection signal="area_exited" from="3D_viewport/spatial_map/3D_cam/render_box" to="." method="_on_render_box_area_exited"]
